--- a/tests/site/index.html
+++ b/tests/site/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="https://test.org/main_page.html">Main Page</a>
+    <a href="main_page.html">Main Page</a>
     <a href="https://www.test.com/">www.test.com</a>
     <img src="https://test.org/image/shopping.jpg">
-    <img src="https://test.org/pics/cactus.jpg">
+    <img src="pics/cactus.jpg">
     <iframe src="https://www.test.com/"></iframe>
-    <a href="https://test.org/image/food.png">Main Page</a>
+    <a href="image/food.png">Main Page</a>
 </body>
 </html>
